force-app/main/default/objects/Portal_Recommendation_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Is_Recommendation_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Recommendation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Of_Recommendation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number Of Recommendation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <label>User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Portal Recommendation Setting</label>
    <pluralLabel>Portal Recommendation Settings</pluralLabel>
</CustomObject>